# michi-img-convert

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  SOLUTIONS.md  USER_INSTRUCTIONS.md  convert_arw.py  docker-compose.yml  pyproject.toml  run_tests.sh  setup-nas.bat  start.bat  start.sh
.claude/: settings.json  settings.local.json
archive/: README.md  convert_arw_cli.py
backend/: .gitignore  Dockerfile  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/services/: __init__.py  converter.py  exif.py  scanner.py
backend/app/utils/: paths.py
backend/tests/: __init__.py
backend/tests/integration/: __init__.py  test_api.py
backend/tests/unit/: __init__.py  test_converter.py  test_paths.py  test_scanner.py
docs/: PROJECT_BLUEPRINT.md
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/__tests__/components/: FolderPicker.test.tsx  PresetSelector.test.tsx  QualitySelector.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ComparisonGallery.tsx  ConversionDashboard.tsx  FolderBrowserModal.tsx  FolderPicker.tsx  PresetSelector.tsx  QualitySelector.tsx  ScanResults.tsx
frontend/src/hooks/: useConverter.ts
frontend/src/lib/: pathUtils.ts
tests/e2e/: test_full_workflow.py
