[project]
name = "michi-img-convert"
version = "0.1.0"
description = "Batch-convert Sony ARW RAW files to high-quality JPEGs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.0",
    "rawpy>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "e2e: end-to-end tests that require running Docker containers",
]
