[project]
name = "michi-backend"
version = "0.1.0"
description = "FastAPI backend for ARW to JPEG conversion"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "rawpy>=0.25.0",
    "imageio>=2.37.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
